# nimble

./: .gitignore  COMMUNITY_SKILLS.md  README.md  config.yaml  pyproject.toml  setup.cfg  trigger_skill.py
.ai/: skill-build.md
.github/workflows/: ci.yml  release.yml
autostart/: nimble.service  nimble.xml
docs/: scratchprd.md  unorganisedIdeas.md  wayland-hotkeys.md
docs/bmad_output/: how-to-build-custom-nimble-skill.md
docs/bmad_output/brainstorming/: brainstorming-session-2026-04-16-nimble-template.md  brainstorming-session-2026-05-10-nimble-stability.md  brainstorming-session-2026-05-12-package-deployment.md
docs/bmad_output/implementation-artifacts/: 1-1-repository-scaffold-with-wired-dev-toolchain.md  1-3-ci-workflow.md  (+58 more)
install/: install.ps1  install.sh
nimble/: __init__.py  __main__.py  daemon.py  logging_setup.py  notifier.py  platform.py  state.py  watcher.py
nimble/cli/: commands.py
nimble/context/: assembler.py
nimble/hotkeys/: __init__.py  base.py  evdev_adapter.py  wayland.py  windows.py  x11.py
nimble/manifest/: installer.py  lock.py  parser.py
nimble/skills/: loader.py  registry.py  runner.py
nimble/tools/: __init__.py  ai.py  clipboard.py  input.py  popup.py  tts.py
skills/greet/: manifest.yaml  skill.py
skills/hello_world/: manifest.yaml  skill.py
skills/quick_clip/: manifest.yaml  skill.py
tests/: conftest.py
tests/integration/: test_nimble_add.py
tests/unit/: test_daemon.py  test_daemon_logging.py  test_notifier.py  test_platform.py  test_state.py  test_watcher.py
worker/: context.py  entrypoint.py
(+34 files in other folders)
