[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "nimble"
version = "1.0.0"
description = "Cross-platform Python hotkey daemon"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "pynput>=1.8.1",
    "pyyaml>=6.0",
    "plyer>=2.1",
    "watchdog>=3.0",
    "evdev>=1.6.1; sys_platform=='linux'",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "mypy==1.20.1",
    "pytest",
    "types-PyYAML",
]

[project.scripts]
nimble = "nimble.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["nimble"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that are slow or need network (opt-in)"]
